# pipeline-ELT-data-garmin

./: .env.example  .gitignore  README.md  main.py  profiles.yml  profiles.yml.example  pyproject.toml
data/landing/: activity_21793498848.csv  activity_21807390786.csv  activity_21830738453.csv  activity_21851453697.csv
dbt_garmin_transformation/: dbt_project.yml
dbt_garmin_transformation/models/marts/: fct_treinos_semanais.sql  schema.yml
dbt_garmin_transformation/models/staging/: source.yml  stg_garmin_activities.sql
src/db/: engine.py
src/ingestion/: ingest_garmin_data.py
tests/: eda.ipynb
