[project]
name = "pipeline-etl-data-garmin"
version = "0.1.0"
description = ""
authors = [
    {name = "Rodrigo Antonio",email = "rodrigoantonioalves2006@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (<3.0.0)",
    "duckdb (>=1.4.4,<2.0.0)",
    "plotly (>=6.5.2,<7.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "streamlit (>=1.54.0,<2.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)"
]

[tool.poetry]
packages = [{include = "pipeline_etl_data_garmin", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
