[project]
name = "pipeline-etl-data-garmin"
version = "0.1.0"
description = ""
authors = [
    {name = "Rodrigo Antonio",email = "rodrigoantonioalves2006@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "pandas (<3.0.0)",
    "duckdb (>=1.4.4,<2.0.0)",
    "plotly (>=6.5.2,<7.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "streamlit (>=1.54.0,<2.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "sqlalchemy-utils (>=0.42.1,<0.43.0)",
    "dbt-postgres (>=1.10.0,<2.0.0)",
    "prefect (>=3.6.17,<4.0.0)"
]

[tool.poetry]
packages = [{include = "pipeline_etl_data_garmin", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
